--- a/bi_views.ipynb
+++ b/bi_views.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,6 +56,31 @@
     "from raw_data.client_data cd \n",
     "join raw_data.transaction_data tt \n",
     "on cd.app_id = tt.app_id\n",
+    ")''')\n",
+    "conn.commit()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = psycopg2.connect(dbname='kr_bruklin', user='postgres', \n",
+    "                        password='admin', host='localhost', port=5432)\n",
+    "\n",
+    "with conn.cursor() as curs:\n",
+    "    curs.execute('''\n",
+    "drop view if exists vw_bi.data_quality;\n",
+    "create view vw_bi.data_quality as (\n",
+    "select \tsum(nr_rows_loaded) as number_of_records_loaded\n",
+    "\t,\tmax(loading_dt) as loading_dt\n",
+    "\t,\tmax(nr_rows_file) as number_of_records_in_source\n",
+    "\t,\tfilename\n",
+    "from raw_data.dq\n",
+    "group by filename\n",
+    "order by 2 desc\n",
     ")''')\n",
     "conn.commit()\n",
     "conn.close()"
