--- a/raw_data.ipynb
+++ b/raw_data.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "\n",
     "with conn.cursor() as curs:\n",
     "    curs.execute('''\n",
-    "drop table if exists raw_data.transaction_data;\n",
+    "drop table if exists raw_data.transaction_data cascade;\n",
     "create table raw_data.transaction_data\n",
     "    (app_id int,\n",
     "    amnt decimal(5,2),\n",
@@ -111,24 +111,13 @@
     "    transaction_number int,\n",
     "    filename varchar(256),\n",
     "    loading_dt timestamp default now());\n",
-    "   \n",
-    "drop table if exists raw_data.client_data;\n",
-    "create table raw_data.client_data\n",
-    "    (app_id int,\n",
-    "    surname varchar(100),\n",
-    "    name varchar(100),\n",
-    "    fathername varchar(100),\n",
-    "    sex varchar(10),\n",
-    "    age int,\n",
-    "    region varchar(100),\n",
-    "    city varchar(100),\n",
-    "    is_married bit,\n",
-    "    has_children bit,\n",
-    "    education varchar(50),\n",
-    "    loading_dt timestamp default now());\n",
     "\n",
     "drop table if exists raw_data.dq;\n",
-    "create table raw_data.dq (filename varchar(256), nr_rows int);\n",
+    "create table raw_data.dq (\n",
+    "filename varchar(256),\n",
+    "nr_rows_file int,\n",
+    "nr_rows_loaded int,\n",
+    "loading_dt timestamp default now());\n",
     "\n",
     "drop table if exists raw_data.log;\n",
     "create table raw_data.log \n",
@@ -143,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05c02ac61a7844a8bd1e630f32a515f0",
+       "model_id": "5643c8a1d67b4cd29491a0988df2a740",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,6 +177,7 @@
     "            curs.execute(f'''insert into raw_data.transaction_data values\n",
     "                            {values}''')\n",
     "            curs.execute(f\" insert into raw_data.log values ('insert', DEFAULT, 'raw_data.transaction_data', '{x}', {tmp.shape[0]})\")\n",
+    "            curs.execute(f\" insert into raw_data.dq values ('{x}', {df.shape[0]}, {tmp.shape[0]}, DEFAULT)\")\n",
     "        conn.commit()  \n",
     "        conn.close()"
    ]
